pb icon resolu + loading + coeur align

--- a/Pages/page1.html
+++ b/Pages/page1.html
@@ -26,7 +26,7 @@
         </div>
 
         <div class="pagesmenu">
-            <div class="pagesmenu__titre">
+            <section class="pagesmenu__titre">
                 <h1>À la française</h1>
                 <div class="container__heart">
                     <div class="container__heart__1">
@@ -36,174 +36,174 @@
                         <i class="fa-solid fa-heart fa-lg"></i>
                     </div>
                 </div>
-            </div>
-            <article class="menu">
-                <h2>ENTRÉES</h2>
+            </section>
+            <section class="menu">
+                <h2 class="menu__titre">ENTRÉES</h2>
                 <div class="menu__underline"></div>
                 <div class="menu__line menu__line--1">
-                    <div class="menu__line__txt">
-                        <div class="menu__line__txt__1">
+                    <article class="menu__line__txt">
+                        <h2 class="menu__line__txt__1">
                             Tartare de poulpe acidulé
-                        </div>
-                        <div class="menu__line__txt__2">
+                        </h2>
+                        <p class="menu__line__txt__2">
                             Aux zests d'orange
-                        </div>
-                    </div>
-                    <div class="menu__line__price">
+                        </p>
+                    </article>
+                    <p class="menu__line__price">
                         25€
-                    </div>
+                    </p>
                     <div class="menu__line__validation">
                         <i class="fa-sharp fa-solid fa-circle-check fa-lg menu__line__validation__icon"></i>
                     </div>
                 </div>
                 <div class="menu__line menu__line--2">
-                    <div class="menu__line__txt">
-                        <div class="menu__line__txt__1">
+                    <article class="menu__line__txt">
+                        <h2 class="menu__line__txt__1">
                             Velouté de légumes d'antan
-                        </div>
-                        <div class="menu__line__txt__2">
+                        </h2>
+                        <p class="menu__line__txt__2">
                             Carotte, panais, topinambour
-                        </div>
-                    </div>
-                    <div class="menu__line__price">
+                        </p>
+                    </article>
+                    <p class="menu__line__price">
                         35€
-                    </div>
+                    </p>
                     <div class="menu__line__validation">
                         <i class="fa-sharp fa-solid fa-circle-check fa-lg menu__line__validation__icon"></i>
                     </div>
                 </div>
                 <div class="menu__line menu__line--3">
-                    <div class="menu__line__txt">
-                        <div class="menu__line__txt__1">
+                    <article class="menu__line__txt">
+                        <h2 class="menu__line__txt__1">
                             Soupe à l'oignon
-                        </div>
-                        <div class="menu__line__txt__2">
+                        </h2>
+                        <p class="menu__line__txt__2">
                             Revisitée
-                        </div>
-                    </div>
-                    <div class="menu__line__price">
+                        </p>
+                    </article>
+                    <p class="menu__line__price">
                         20€
-                    </div>
+                    </p>
                     <div class="menu__line__validation">
                         <i class="fa-sharp fa-solid fa-circle-check fa-lg menu__line__validation__icon"></i>
                     </div>
                 </div>
-            </article>
-            <article class="menu">
-                <h2>PLATS</h2>
+            </section>
+            <section class="menu">
+                <h2 class="menu__titre">PLATS</h2>
                 <div class="menu__underline"></div>
                 <div class="menu__line menu__line--4">
-                    <div class="menu__line__txt">
-                        <div class="menu__line__txt__1">
+                    <article class="menu__line__txt">
+                        <h2 class="menu__line__txt__1">
                             Coquille Saint-Jacques
-                        </div>
-                        <div class="menu__line__txt__2">
+                        </h2>
+                        <p class="menu__line__txt__2">
                             Accompagnées d'une purée de panais
-                        </div>
-                    </div>
-                    <div class="menu__line__price">
+                        </p>
+                    </article>
+                    <p class="menu__line__price">
                         40€
-                    </div>
+                    </p>
                     <div class="menu__line__validation">
                         <i class="fa-sharp fa-solid fa-circle-check fa-lg menu__line__validation__icon"></i>
                     </div>
                 </div>
                 <div class="menu__line menu__line--5">
-                    <div class="menu__line__txt">
-                        <div class="menu__line__txt__1">
+                    <article class="menu__line__txt">
+                        <h2 class="menu__line__txt__1">
                             Magret de canard
-                        </div>
-                        <div class="menu__line__txt__2">
+                        </h2>
+                        <p class="menu__line__txt__2">
                             Et parmentier de pommes de terres
-                        </div>
-                    </div>
-                    <div class="menu__line__price">
+                        </p>
+                    </article>
+                    <p class="menu__line__price">
                         35€
-                    </div>
+                    </p>
                     <div class="menu__line__validation">
                         <i class="fa-sharp fa-solid fa-circle-check fa-lg menu__line__validation__icon"></i>
                     </div>
                 </div>
                 <div class="menu__line menu__line--6">
-                    <div class="menu__line__txt">
-                        <div class="menu__line__txt__1">
+                    <article class="menu__line__txt">
+                        <h2 class="menu__line__txt__1">
                             Pigeonneaux d'Ille-et-Vilaine
-                        </div>
-                        <div class="menu__line__txt__2">
+                        </h2>
+                        <p class="menu__line__txt__2">
                             Sur son lit de gnocchis aux légumes
-                        </div>
-                    </div>
-                    <div class="menu__line__price">
+                        </p>
+                    </article>
+                    <p class="menu__line__price">
                         44€
-                    </div>
+                    </p>
                     <div class="menu__line__validation">
                         <i class="fa-sharp fa-solid fa-circle-check fa-lg menu__line__validation__icon"></i>
                     </div>
                 </div>
-            </article>
-            <article class="menu">
-                <h2>DESSERTS</h2>
+            </section>
+            <section class="menu">
+                <h2 class="menu__titre">DESSERTS</h2>
                 <div class="menu__underline"></div>
                 <div class="menu__line menu__line--7">
-                    <div class="menu__line__txt">
-                        <div class="menu__line__txt__1">
+                    <article class="menu__line__txt">
+                        <h2 class="menu__line__txt__1">
                             Pétales de violettes glacés
-                        </div>
-                        <div class="menu__line__txt__2">
+                        </h2>
+                        <p class="menu__line__txt__2">
                             Et purée de noisettes
-                        </div>
-                    </div>
-                    <div class="menu__line__price">
+                        </p>
+                    </article>
+                    <p class="menu__line__price">
                         18€
-                    </div>
+                    </p>
                     <div class="menu__line__validation">
                         <i class="fa-sharp fa-solid fa-circle-check fa-lg menu__line__validation__icon"></i>
                     </div>
                 </div>
                 <div class="menu__line menu__line--8">
-                    <div class="menu__line__txt">
-                        <div class="menu__line__txt__1">
+                    <article class="menu__line__txt">
+                        <h2 class="menu__line__txt__1">
                             Fondant au chocolat
-                        </div>
-                        <div class="menu__line__txt__2">
+                        </h2>
+                        <p class="menu__line__txt__2">
                             Revisité
-                        </div>
-                    </div>
-                    <div class="menu__line__price">
+                        </p>
+                    </article>
+                    <p class="menu__line__price">
                         22€
-                    </div>
+                    </p>
                     <div class="menu__line__validation">
                         <i class="fa-sharp fa-solid fa-circle-check fa-lg menu__line__validation__icon"></i>
                     </div>
                 </div>
                 <div class="menu__line menu__line--9">
-                    <div class="menu__line__txt">
-                        <div class="menu__line__txt__1">
+                    <article class="menu__line__txt">
+                        <h2 class="menu__line__txt__1">
                             Millefeuille croustillant
-                        </div>
-                        <div class="menu__line__txt__2">
+                        </h2>
+                        <p class="menu__line__txt__2">
                             Myrtilles et pâte d'amande
-                        </div>
-                    </div>
-                    <div class="menu__line__price">
+                        </p>
+                    </article>
+                    <p class="menu__line__price">
                         23€
-                    </div>
+                    </p>
                     <div class="menu__line__validation">
                         <i class="fa-sharp fa-solid fa-circle-check fa-lg menu__line__validation__icon"></i>
                     </div>
                 </div>
-            </article>
+            </section>
             <div class="bouton">
-                <div class="btn">Commander</div>
+                <button class="btn">Commander</button>
             </div>
         </div>
 
 
         <footer class="footer">
             <div class="container">
-                <div class="footer__logo">
+                <h2 class="footer__logo">
                     ohmyfood
-                </div>
+                </h2>
                 <ul class="footer__puces">
                     <li class="footer__puces__list">
                         <div class="footer__puces__list__icon">
@@ -216,7 +216,7 @@
                         </div>
                         <a href="#">Devenir partenaire</a></li>
                     <li class="footer__puces__list"><a href="#">Mentions légales</a></li>
-                    <li class="footer__puces__list"><a href="mailto: abc@example.com">Contact</a></li>
+                    <li class="footer__puces__list"><a href="mailto:abc@example.com">Contact</a></li>
                 </ul>
             </div>
         </footer>
