--- a/Pages/page3.html
+++ b/Pages/page3.html
@@ -26,7 +26,7 @@
         </div>
 
         <div class="pagesmenu">
-            <div class="pagesmenu__titre">
+            <section class="pagesmenu__titre">
                 <h1>La palette du goût</h1>
                 <div class="container__heart">
                     <div class="container__heart__1">
@@ -36,173 +36,174 @@
                         <i class="fa-solid fa-heart fa-lg"></i>
                     </div>
                 </div>
-            </div>
-            <article class="menu">
-                <h2>ENTRÉES</h2>
+            </section>
+            <section class="menu">
+                <h2 class="menu__titre">ENTRÉES</h2>
                 <div class="menu__underline"></div>
                 <div class="menu__line menu__line--1">
-                    <div class="menu__line__txt">
-                        <div class="menu__line__txt__1">
-                            Fricassée d'escagot
-                        </div>
-                        <div class="menu__line__txt__2">
+                    <article class="menu__line__txt">
+                        <h2 class="menu__line__txt__1">
+                            Fricassée d'escargot
+                        </h2>
+                        <p class="menu__line__txt__2">
                             Au piment d'espelette
-                        </div>
-                    </div>
-                    <div class="menu__line__price">
+                        </p>
+                    </article>
+                    <p class="menu__line__price">
                         25€
-                    </div>
+                    </p>
                     <div class="menu__line__validation">
-                        <i class="fa-sharp fa-solid fa-circle-check fa-lg"></i>
+                        <i class="fa-sharp fa-solid fa-circle-check fa-lg menu__line__validation__icon"></i>
                     </div>
                 </div>
                 <div class="menu__line menu__line--2">
-                    <div class="menu__line__txt">
-                        <div class="menu__line__txt__1">
+                    <article class="menu__line__txt">
+                        <h2 class="menu__line__txt__1">
                             Foie gras de canard mi-cuit
-                        </div>
-                        <div class="menu__line__txt__2">
-                            Et ses copeaux de truffe noire
-                        </div>
-                    </div>
-                    <div class="menu__line__price">
+                        </h2>
+                        <p class="menu__line__txt__2">
+                            Et ses copeaux de truffes noire
+                        </p>
+                    </article>
+                    <p class="menu__line__price">
                         35€
-                    </div>
+                    </p>
                     <div class="menu__line__validation">
                         <i class="fa-sharp fa-solid fa-circle-check fa-lg menu__line__validation__icon"></i>
                     </div>
                 </div>
                 <div class="menu__line menu__line--3">
-                    <div class="menu__line__txt">
-                        <div class="menu__line__txt__1">
+                    <article class="menu__line__txt">
+                        <h2 class="menu__line__txt__1">
                             Oeuf au plat
-                        </div>
-                        <div class="menu__line__txt__2">
-                            Assaisonné à la truffe sur lit de...
-                        </div>
-                    </div>
-                    <div class="menu__line__price">
+                        </h2>
+                        <p class="menu__line__txt__2">
+                            Assaisonné à la truffe sur lit de caviar
+                        </p>
+                    </article>
+                    <p class="menu__line__price">
                         20€
-                    </div>
+                    </p>
                     <div class="menu__line__validation">
                         <i class="fa-sharp fa-solid fa-circle-check fa-lg menu__line__validation__icon"></i>
                     </div>
                 </div>
-            </article>
-            <article class="menu">
-                <h2>PLATS</h2>
+            </section>
+            <section class="menu">
+                <h2 class="menu__titre">PLATS</h2>
                 <div class="menu__underline"></div>
                 <div class="menu__line menu__line--4">
-                    <div class="menu__line__txt">
-                        <div class="menu__line__txt__1">
+                    <article class="menu__line__txt">
+                        <h2 class="menu__line__txt__1">
                             Filet de boeuf aux herbes
-                        </div>
-                        <div class="menu__line__txt__2">
-                            Accompagné de sa ribambelle de légumes
-                        </div>
-                    </div>
-                    <div class="menu__line__price">
+                        </h2>
+                        <p class="menu__line__txt__2">
+                            Accompagnées de sa ribambelle de légumes
+                        </p>
+                    </article>
+                    <p class="menu__line__price">
                         40€
-                    </div>
+                    </p>
                     <div class="menu__line__validation">
                         <i class="fa-sharp fa-solid fa-circle-check fa-lg menu__line__validation__icon"></i>
                     </div>
                 </div>
                 <div class="menu__line menu__line--5">
-                    <div class="menu__line__txt">
-                        <div class="menu__line__txt__1">
+                    <article class="menu__line__txt">
+                        <h2 class="menu__line__txt__1">
                             Parmentier de queue de boeuf
-                        </div>
-                        <div class="menu__line__txt__2">
+                        </h2>
+                        <p class="menu__line__txt__2">
                             À la truffe noire sur sa purée de panais
-                        </div>
-                    </div>
-                    <div class="menu__line__price">
+                        </p>
+                    </article>
+                    <p class="menu__line__price">
                         35€
-                    </div>
+                    </p>
                     <div class="menu__line__validation">
                         <i class="fa-sharp fa-solid fa-circle-check fa-lg menu__line__validation__icon"></i>
                     </div>
                 </div>
                 <div class="menu__line menu__line--6">
-                    <div class="menu__line__txt">
-                        <div class="menu__line__txt__1">
+                    <article class="menu__line__txt">
+                        <h2 class="menu__line__txt__1">
                             Filet de Turbot
-                        </div>
-                        <div class="menu__line__txt__2">
+                        </h2>
+                        <p class="menu__line__txt__2">
                             Aux agrumes
-                        </div>
-                    </div>
-                    <div class="menu__line__price">
+                        </p>
+                    </article>
+                    <p class="menu__line__price">
                         44€
-                    </div>
+                    </p>
                     <div class="menu__line__validation">
                         <i class="fa-sharp fa-solid fa-circle-check fa-lg menu__line__validation__icon"></i>
                     </div>
                 </div>
-            </article>
-            <article class="menu">
-                <h2>DESSERTS</h2>
+            </section>
+            <section class="menu">
+                <h2 class="menu__titre">DESSERTS</h2>
                 <div class="menu__underline"></div>
                 <div class="menu__line menu__line--7">
-                    <div class="menu__line__txt">
-                        <div class="menu__line__txt__1">
+                    <article class="menu__line__txt">
+                        <h2 class="menu__line__txt__1">
                             Paris-Brest
-                        </div>
-                        <div class="menu__line__txt__2">
+                        </h2>
+                        <p class="menu__line__txt__2">
                             Revisité
-                        </div>
-                    </div>
-                    <div class="menu__line__price">
+                        </p>
+                    </article>
+                    <p class="menu__line__price">
                         18€
-                    </div>
+                    </p>
                     <div class="menu__line__validation">
                         <i class="fa-sharp fa-solid fa-circle-check fa-lg menu__line__validation__icon"></i>
                     </div>
                 </div>
                 <div class="menu__line menu__line--8">
-                    <div class="menu__line__txt">
-                        <div class="menu__line__txt__1">
+                    <article class="menu__line__txt">
+                        <h2 class="menu__line__txt__1">
                             Macaron au chocolat d'exception
-                        </div>
-                        <div class="menu__line__txt__2">
+                        </h2>
+                        <p class="menu__line__txt__2">
                             Et glace à la vanille de Madagascar
-                        </div>
-                    </div>
-                    <div class="menu__line__price">
+                        </p>
+                    </article>
+                    <p class="menu__line__price">
                         22€
-                    </div>
+                    </p>
                     <div class="menu__line__validation">
                         <i class="fa-sharp fa-solid fa-circle-check fa-lg menu__line__validation__icon"></i>
                     </div>
                 </div>
                 <div class="menu__line menu__line--9">
-                    <div class="menu__line__txt">
-                        <div class="menu__line__txt__1">
+                    <article class="menu__line__txt">
+                        <h2 class="menu__line__txt__1">
                             Mousse au chocolat
-                        </div>
-                        <div class="menu__line__txt__2">
+                        </h2>
+                        <p class="menu__line__txt__2">
                             Au piment d'espelette et à la truffe noire
-                        </div>
-                    </div>
-                    <div class="menu__line__price">
+                        </p>
+                    </article>
+                    <p class="menu__line__price">
                         23€
-                    </div>
+                    </p>
                     <div class="menu__line__validation">
                         <i class="fa-sharp fa-solid fa-circle-check fa-lg menu__line__validation__icon"></i>
                     </div>
                 </div>
-            </article>
+            </section>
             <div class="bouton">
-                <div class="btn">Commander</div>
+                <button class="btn">Commander</button>
             </div>
         </div>
 
+
         <footer class="footer">
             <div class="container">
-                <div class="footer__logo">
+                <h2 class="footer__logo">
                     ohmyfood
-                </div>
+                </h2>
                 <ul class="footer__puces">
                     <li class="footer__puces__list">
                         <div class="footer__puces__list__icon">
@@ -215,7 +216,7 @@
                         </div>
                         <a href="#">Devenir partenaire</a></li>
                     <li class="footer__puces__list"><a href="#">Mentions légales</a></li>
-                    <li class="footer__puces__list"><a href="mailto: abc@example.com">Contact</a></li>
+                    <li class="footer__puces__list"><a href="mailto:abc@example.com">Contact</a></li>
                 </ul>
             </div>
         </footer>
