--- a/Pages/page4.html
+++ b/Pages/page4.html
@@ -26,8 +26,8 @@
         </div>
 
         <div class="pagesmenu">
-            <div class="pagesmenu__titre">
-                <h1>Le délice des sens</h1>
+            <section class="pagesmenu__titre">
+                <h1>À la française</h1>
                 <div class="container__heart">
                     <div class="container__heart__1">
                         <i class="fa-regular fa-heart fa-lg"></i>
@@ -36,173 +36,174 @@
                         <i class="fa-solid fa-heart fa-lg"></i>
                     </div>
                 </div>
-            </div>
-            <article class="menu">
-                <h2>ENTRÉES</h2>
+            </section>
+            <section class="menu">
+                <h2 class="menu__titre">ENTRÉES</h2>
                 <div class="menu__underline"></div>
                 <div class="menu__line menu__line--1">
-                    <div class="menu__line__txt">
-                        <div class="menu__line__txt__1">
+                    <article class="menu__line__txt">
+                        <h2 class="menu__line__txt__1">
                             Tartare de thon
-                        </div>
-                        <div class="menu__line__txt__2">
+                        </h2>
+                        <p class="menu__line__txt__2">
                             Assaisonné au yuzu
-                        </div>
-                    </div>
-                    <div class="menu__line__price">
+                        </p>
+                    </article>
+                    <p class="menu__line__price">
                         25€
-                    </div>
+                    </p>
                     <div class="menu__line__validation">
-                        <i class="fa-sharp fa-solid fa-circle-check fa-lg"></i>
+                        <i class="fa-sharp fa-solid fa-circle-check fa-lg menu__line__validation__icon"></i>
                     </div>
                 </div>
                 <div class="menu__line menu__line--2">
-                    <div class="menu__line__txt">
-                        <div class="menu__line__txt__1">
+                    <article class="menu__line__txt">
+                        <h2 class="menu__line__txt__1">
                             Bouchée de homard croustillant
-                        </div>
-                        <div class="menu__line__txt__2">
+                        </h2>
+                        <p class="menu__line__txt__2">
                             Et sa farandole de petits légumes
-                        </div>
-                    </div>
-                    <div class="menu__line__price">
+                        </p>
+                    </article>
+                    <p class="menu__line__price">
                         35€
-                    </div>
+                    </p>
                     <div class="menu__line__validation">
-                        <i class="fa-sharp fa-solid fa-circle-check fa-lg"></i>
+                        <i class="fa-sharp fa-solid fa-circle-check fa-lg menu__line__validation__icon"></i>
                     </div>
                 </div>
                 <div class="menu__line menu__line--3">
-                    <div class="menu__line__txt">
-                        <div class="menu__line__txt__1">
+                    <article class="menu__line__txt">
+                        <h2 class="menu__line__txt__1">
                             Velouté de cèpes
-                        </div>
-                        <div class="menu__line__txt__2">
+                        </h2>
+                        <p class="menu__line__txt__2">
                             Aux truffes
-                        </div>
-                    </div>
-                    <div class="menu__line__price">
+                        </p>
+                    </article>
+                    <p class="menu__line__price">
                         20€
-                    </div>
+                    </p>
                     <div class="menu__line__validation">
-                        <i class="fa-sharp fa-solid fa-circle-check fa-lg"></i>
+                        <i class="fa-sharp fa-solid fa-circle-check fa-lg menu__line__validation__icon"></i>
                     </div>
                 </div>
-            </article>
-            <article class="menu">
-                <h2>PLATS</h2>
+            </section>
+            <section class="menu">
+                <h2 class="menu__titre">PLATS</h2>
                 <div class="menu__underline"></div>
                 <div class="menu__line menu__line--4">
-                    <div class="menu__line__txt">
-                        <div class="menu__line__txt__1">
+                    <article class="menu__line__txt">
+                        <h2 class="menu__line__txt__1">
                             Poulet rôti aux herbes de provence
-                        </div>
-                        <div class="menu__line__txt__2">
+                        </h2>
+                        <p class="menu__line__txt__2">
                             Et sa crème de truffe
-                        </div>
-                    </div>
-                    <div class="menu__line__price">
+                        </p>
+                    </article>
+                    <p class="menu__line__price">
                         40€
-                    </div>
+                    </p>
                     <div class="menu__line__validation">
-                        <i class="fa-sharp fa-solid fa-circle-check fa-lg"></i>
+                        <i class="fa-sharp fa-solid fa-circle-check fa-lg menu__line__validation__icon"></i>
                     </div>
                 </div>
                 <div class="menu__line menu__line--5">
-                    <div class="menu__line__txt">
-                        <div class="menu__line__txt__1">
+                    <article class="menu__line__txt">
+                        <h2 class="menu__line__txt__1">
                             Langouste rôtie
-                        </div>
-                        <div class="menu__line__txt__2">
+                        </h2>
+                        <p class="menu__line__txt__2">
                             Et ses légumes de saison
-                        </div>
-                    </div>
-                    <div class="menu__line__price">
+                        </p>
+                    </article>
+                    <p class="menu__line__price">
                         35€
-                    </div>
+                    </p>
                     <div class="menu__line__validation">
-                        <i class="fa-sharp fa-solid fa-circle-check fa-lg"></i>
+                        <i class="fa-sharp fa-solid fa-circle-check fa-lg menu__line__validation__icon"></i>
                     </div>
                 </div>
                 <div class="menu__line menu__line--6">
-                    <div class="menu__line__txt">
-                        <div class="menu__line__txt__1">
+                    <article class="menu__line__txt">
+                        <h2 class="menu__line__txt__1">
                             Côte de boeuf angus
-                        </div>
-                        <div class="menu__line__txt__2">
+                        </h2>
+                        <p class="menu__line__txt__2">
                             Et sa purée de panais
-                        </div>
-                    </div>
-                    <div class="menu__line__price">
+                        </p>
+                    </article>
+                    <p class="menu__line__price">
                         44€
-                    </div>
+                    </p>
                     <div class="menu__line__validation">
-                        <i class="fa-sharp fa-solid fa-circle-check fa-lg"></i>
+                        <i class="fa-sharp fa-solid fa-circle-check fa-lg menu__line__validation__icon"></i>
                     </div>
                 </div>
-            </article>
-            <article class="menu">
-                <h2>DESSERTS</h2>
+            </section>
+            <section class="menu">
+                <h2 class="menu__titre">DESSERTS</h2>
                 <div class="menu__underline"></div>
                 <div class="menu__line menu__line--7">
-                    <div class="menu__line__txt">
-                        <div class="menu__line__txt__1">
+                    <article class="menu__line__txt">
+                        <h2 class="menu__line__txt__1">
                             Farandole de desserts
-                        </div>
-                        <div class="menu__line__txt__2">
+                        </h2>
+                        <p class="menu__line__txt__2">
                             Du chef
-                        </div>
-                    </div>
-                    <div class="menu__line__price">
+                        </p>
+                    </article>
+                    <p class="menu__line__price">
                         18€
-                    </div>
+                    </p>
                     <div class="menu__line__validation">
-                        <i class="fa-sharp fa-solid fa-circle-check fa-lg"></i>
+                        <i class="fa-sharp fa-solid fa-circle-check fa-lg menu__line__validation__icon"></i>
                     </div>
                 </div>
                 <div class="menu__line menu__line--8">
-                    <div class="menu__line__txt">
-                        <div class="menu__line__txt__1">
+                    <article class="menu__line__txt">
+                        <h2 class="menu__line__txt__1">
                             Crème brulée
-                        </div>
-                        <div class="menu__line__txt__2">
-                            Revisitée
-                        </div>
-                    </div>
-                    <div class="menu__line__price">
+                        </h2>
+                        <p class="menu__line__txt__2">
+                            Revisité
+                        </p>
+                    </article>
+                    <p class="menu__line__price">
                         22€
-                    </div>
+                    </p>
                     <div class="menu__line__validation">
-                        <i class="fa-sharp fa-solid fa-circle-check fa-lg"></i>
+                        <i class="fa-sharp fa-solid fa-circle-check fa-lg menu__line__validation__icon"></i>
                     </div>
                 </div>
                 <div class="menu__line menu__line--9">
-                    <div class="menu__line__txt">
-                        <div class="menu__line__txt__1">
+                    <article class="menu__line__txt">
+                        <h2 class="menu__line__txt__1">
                             Tiramisu
-                        </div>
-                        <div class="menu__line__txt__2">
-                            A la noisette
-                        </div>
-                    </div>
-                    <div class="menu__line__price">
+                        </h2>
+                        <p class="menu__line__txt__2">
+                            À la noisette
+                        </p>
+                    </article>
+                    <p class="menu__line__price">
                         23€
-                    </div>
+                    </p>
                     <div class="menu__line__validation">
-                        <i class="fa-sharp fa-solid fa-circle-check fa-lg"></i>
+                        <i class="fa-sharp fa-solid fa-circle-check fa-lg menu__line__validation__icon"></i>
                     </div>
                 </div>
-            </article>
+            </section>
             <div class="bouton">
-                <div class="btn">Commander</div>
+                <button class="btn">Commander</button>
             </div>
         </div>
 
+
         <footer class="footer">
             <div class="container">
-                <div class="footer__logo">
+                <h2 class="footer__logo">
                     ohmyfood
-                </div>
+                </h2>
                 <ul class="footer__puces">
                     <li class="footer__puces__list">
                         <div class="footer__puces__list__icon">
@@ -215,7 +216,7 @@
                         </div>
                         <a href="#">Devenir partenaire</a></li>
                     <li class="footer__puces__list"><a href="#">Mentions légales</a></li>
-                    <li class="footer__puces__list"><a href="mailto: someone@example.com">Contact</a></li>
+                    <li class="footer__puces__list"><a href="mailto:abc@example.com">Contact</a></li>
                 </ul>
             </div>
         </footer>
