--- a/Pages/page2.html
+++ b/Pages/page2.html
@@ -22,11 +22,11 @@
         </header>
 
         <div class="pagesimg">
-            <img class="pagesimg__img" src="../images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" alt="La note enchantée">
+            <img class="pagesimg__img pagesimg__img--position" src="../images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" alt="La note enchantée">
         </div>
 
         <div class="pagesmenu">
-            <div class="pagesmenu__titre">
+            <section class="pagesmenu__titre">
                 <h1>La note enchantée</h1>
                 <div class="container__heart">
                     <div class="container__heart__1">
@@ -36,189 +36,190 @@
                         <i class="fa-solid fa-heart fa-lg"></i>
                     </div>
                 </div>
-            </div>
-            <article class="menu">
-                <h2>ENTRÉES</h2>
+            </section>
+            <section class="menu">
+                <h2 class="menu__titre">ENTRÉES</h2>
                 <div class="menu__underline"></div>
                 <div class="menu__line menu__line--1">
-                    <div class="menu__line__txt">
-                        <div class="menu__line__txt__1">
+                    <article class="menu__line__txt">
+                        <h2 class="menu__line__txt__1">
                             Ravioles de foie gras
-                        </div>
-                        <div class="menu__line__txt__2">
+                        </h2>
+                        <p class="menu__line__txt__2">
                             Accompagnés de leur crème à la truffe
-                        </div>
-                    </div>
-                    <div class="menu__line__price">
+                        </p>
+                    </article>
+                    <p class="menu__line__price">
                         25€
-                    </div>
+                    </p>
                     <div class="menu__line__validation">
-                        <i class="fa-sharp fa-solid fa-circle-check fa-lg"></i>
+                        <i class="fa-sharp fa-solid fa-circle-check fa-lg menu__line__validation__icon"></i>
                     </div>
                 </div>
                 <div class="menu__line menu__line--2">
-                    <div class="menu__line__txt">
-                        <div class="menu__line__txt__1">
+                    <article class="menu__line__txt">
+                        <h2 class="menu__line__txt__1">
                             Caviar osciètre
-                        </div>
-                        <div class="menu__line__txt__2">
-                            Sur blini à la farine de blé noir
-                        </div>
-                    </div>
-                    <div class="menu__line__price">
+                        </h2>
+                        <p class="menu__line__txt__2">
+                            Sur blini à la farine
+                        </p>
+                    </article>
+                    <p class="menu__line__price">
                         35€
-                    </div>
+                    </p>
                     <div class="menu__line__validation">
                         <i class="fa-sharp fa-solid fa-circle-check fa-lg menu__line__validation__icon"></i>
                     </div>
                 </div>
                 <div class="menu__line menu__line--3">
-                    <div class="menu__line__txt">
-                        <div class="menu__line__txt__1">
-                            Homard et espuma de...
-                        </div>
-                        <div class="menu__line__txt__2">
+                    <article class="menu__line__txt">
+                        <h2 class="menu__line__txt__1">
+                            Homard et espuma de potiron
+                        </h2>
+                        <p class="menu__line__txt__2">
                             Mariné aux zests d'orange
-                        </div>
-                    </div>
-                    <div class="menu__line__price">
+                        </p>
+                    </article>
+                    <p class="menu__line__price">
                         20€
-                    </div>
+                    </p>
                     <div class="menu__line__validation">
                         <i class="fa-sharp fa-solid fa-circle-check fa-lg menu__line__validation__icon"></i>
                     </div>
                 </div>
                 <div class="menu__line menu__line--4">
-                    <div class="menu__line__txt">
-                        <div class="menu__line__txt__1">
+                    <article class="menu__line__txt">
+                        <h2 class="menu__line__txt__1">
                             Foie gras de canard cuit entier
-                        </div>
-                        <div class="menu__line__txt__2">
+                        </h2>
+                        <p class="menu__line__txt__2">
                             Confiture de figue et pain toasté
-                        </div>
-                    </div>
-                    <div class="menu__line__price">
+                        </p>
+                    </article>
+                    <p class="menu__line__price">
                         35€
-                    </div>
+                    </p>
                     <div class="menu__line__validation">
                         <i class="fa-sharp fa-solid fa-circle-check fa-lg menu__line__validation__icon"></i>
                     </div>
                 </div>
-            </article>
-            <article class="menu">
-                <h2>PLATS</h2>
+            </section>
+            <section class="menu">
+                <h2 class="menu__titre">PLATS</h2>
                 <div class="menu__underline"></div>
                 <div class="menu__line menu__line--5">
-                    <div class="menu__line__txt">
-                        <div class="menu__line__txt__1">
-                            Noix de coquilles Saint-Jacques
-                        </div>
-                        <div class="menu__line__txt__2">
+                    <article class="menu__line__txt">
+                        <h2 class="menu__line__txt__1">
+                            Noix de coquille Saint-Jacques
+                        </h2>
+                        <p class="menu__line__txt__2">
                             Sur lit de purée de céleri-rave
-                        </div>
-                    </div>
-                    <div class="menu__line__price">
+                        </p>
+                    </article>
+                    <p class="menu__line__price">
                         40€
-                    </div>
+                    </p>
                     <div class="menu__line__validation">
                         <i class="fa-sharp fa-solid fa-circle-check fa-lg menu__line__validation__icon"></i>
                     </div>
                 </div>
                 <div class="menu__line menu__line--6">
-                    <div class="menu__line__txt">
-                        <div class="menu__line__txt__1">
+                    <article class="menu__line__txt">
+                        <h2 class="menu__line__txt__1">
                             Langoustine poêlée
-                        </div>
-                        <div class="menu__line__txt__2">
+                        </h2>
+                        <p class="menu__line__txt__2">
                             Purée de patate douce
-                        </div>
-                    </div>
-                    <div class="menu__line__price">
+                        </p>
+                    </article>
+                    <p class="menu__line__price">
                         35€
-                    </div>
+                    </p>
                     <div class="menu__line__validation">
                         <i class="fa-sharp fa-solid fa-circle-check fa-lg menu__line__validation__icon"></i>
                     </div>
                 </div>
                 <div class="menu__line menu__line--7">
-                    <div class="menu__line__txt">
-                        <div class="menu__line__txt__1">
+                    <article class="menu__line__txt">
+                        <h2 class="menu__line__txt__1">
                             Mijoté de queue de boeuf
-                        </div>
-                        <div class="menu__line__txt__2">
+                        </h2>
+                        <p class="menu__line__txt__2">
                             Et riz sauvage aux zests de citron
-                        </div>
-                    </div>
-                    <div class="menu__line__price">
+                        </p>
+                    </article>
+                    <p class="menu__line__price">
                         44€
-                    </div>
+                    </p>
                     <div class="menu__line__validation">
                         <i class="fa-sharp fa-solid fa-circle-check fa-lg menu__line__validation__icon"></i>
                     </div>
                 </div>
-            </article>
-            <article class="menu">
-                <h2>DESSERTS</h2>
+            </section>
+            <section class="menu">
+                <h2 class="menu__titre">DESSERTS</h2>
                 <div class="menu__underline"></div>
                 <div class="menu__line menu__line--8">
-                    <div class="menu__line__txt">
-                        <div class="menu__line__txt__1">
+                    <article class="menu__line__txt">
+                        <h2 class="menu__line__txt__1">
                             Macaron noisette et chocolat
-                        </div>
-                        <div class="menu__line__txt__2">
-                            Glace au caramel brun et sel de Guérande
-                        </div>
-                    </div>
-                    <div class="menu__line__price">
+                        </h2>
+                        <p class="menu__line__txt__2">
+                            Glace au caramel et sel de Guérande
+                        </p>
+                    </article>
+                    <p class="menu__line__price">
                         18€
-                    </div>
+                    </p>
                     <div class="menu__line__validation">
                         <i class="fa-sharp fa-solid fa-circle-check fa-lg menu__line__validation__icon"></i>
                     </div>
                 </div>
                 <div class="menu__line menu__line--9">
-                    <div class="menu__line__txt">
-                        <div class="menu__line__txt__1">
+                    <article class="menu__line__txt">
+                        <h2 class="menu__line__txt__1">
                             Baba au rhum revisité
-                        </div>
-                        <div class="menu__line__txt__2">
+                        </h2>
+                        <p class="menu__line__txt__2">
                             Avec son coulis de citron
-                        </div>
-                    </div>
-                    <div class="menu__line__price">
+                        </p>
+                    </article>
+                    <p class="menu__line__price">
                         22€
-                    </div>
+                    </p>
                     <div class="menu__line__validation">
                         <i class="fa-sharp fa-solid fa-circle-check fa-lg menu__line__validation__icon"></i>
                     </div>
                 </div>
                 <div class="menu__line menu__line--10">
-                    <div class="menu__line__txt">
-                        <div class="menu__line__txt__1">
+                    <article class="menu__line__txt">
+                        <h2 class="menu__line__txt__1">
                             Tarte au citron meringuée
-                        </div>
-                        <div class="menu__line__txt__2">
+                        </h2>
+                        <p class="menu__line__txt__2">
                             Destructurée
-                        </div>
-                    </div>
-                    <div class="menu__line__price">
+                        </p>
+                    </article>
+                    <p class="menu__line__price">
                         23€
-                    </div>
+                    </p>
                     <div class="menu__line__validation">
                         <i class="fa-sharp fa-solid fa-circle-check fa-lg menu__line__validation__icon"></i>
                     </div>
                 </div>
-            </article>
+            </section>
             <div class="bouton">
-                <div class="btn">Commander</div>
+                <button class="btn">Commander</button>
             </div>
         </div>
 
+
         <footer class="footer">
             <div class="container">
-                <div class="footer__logo">
+                <h2 class="footer__logo">
                     ohmyfood
-                </div>
+                </h2>
                 <ul class="footer__puces">
                     <li class="footer__puces__list">
                         <div class="footer__puces__list__icon">
@@ -231,7 +232,7 @@
                         </div>
                         <a href="#">Devenir partenaire</a></li>
                     <li class="footer__puces__list"><a href="#">Mentions légales</a></li>
-                    <li class="footer__puces__list"><a href="mailto: abc@example.com">Contact</a></li>
+                    <li class="footer__puces__list"><a href="mailto:abc@example.com">Contact</a></li>
                 </ul>
             </div>
         </footer>
