--- a/index.html
+++ b/index.html
@@ -11,7 +11,36 @@
         <title>ohmyfood</title>
     </head>
 
-    <body>
+    <body class="body">
+        <div class="body__blank">
+            <div class="loading">
+                <img class="loading__icon" src="../images/loading/homme.png" alt="Homme">
+                <div class="loading__stacks">
+                    <div class="loading__stacks__stack">
+                        <div class="loading__stacks__stack__color loading__stacks__stack__color--1"></div>
+                    </div>
+                    <div class="loading__stacks__stack">
+                        <div class="loading__stacks__stack__color loading__stacks__stack__color--2"></div>
+                    </div>
+                    <div class="loading__stacks__stack">
+                        <div class="loading__stacks__stack__color loading__stacks__stack__color--3"></div>
+                    </div>
+                    <div class="loading__stacks__stack">
+                        <div class="loading__stacks__stack__color loading__stacks__stack__color--4"></div>
+                    </div>
+                </div>
+                <div class="loading__cloud">
+                    <svg class="loading__cloud__all" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 1000 1000" enable-background="new 0 0 1000 1000" xml:space="preserve">
+                        <g><g transform="translate(0.000000,511.000000) scale(0.100000,-0.100000)">
+                            <path class="loading__cloud__all__big" d="M5196.5,4981c-231.2-45.5-484.2-148.2-685.8-276.7c-51.4-33.6-55.3-33.6-164,39.5c-260.9,173.9-484.2,237.2-822.2,237.2c-217.4,0-266.8-7.9-405.2-55.3c-211.5-73.1-403.2-187.8-551.4-336c-150.2-146.3-209.5-235.2-298.4-436.8l-67.2-154.2l-154.2-57.3C676.4,3443.3-96.4,2004.5,330.5,747.4C583.5,8.2,1233.7-620.3,2022.3-885.1c164-53.4,517.8-130.5,606.8-130.5c33.6,0,112.7-35.6,191.7-87c377.5-243.1,934.9-298.4,1383.5-136.4l136.4,49.4l170-88.9C5327-1709.3,6499-1493.9,7068.2-808l98.8,118.6l308.3,2c347.9,3.9,587,43.5,885.4,148.2c705.6,249,1237.2,772.8,1389.4,1369.7c53.4,207.5,53.4,504,2,707.6c-90.9,349.8-345.9,707.6-675.9,942.8c-88.9,63.3-90.9,67.2-104.8,195.7c-77.1,828.1-820.2,1535.7-1727.4,1644.4c-164,19.8-175.9,23.7-241.1,96.8c-260.9,284.6-602.8,476.3-998.1,557.4C5791.4,5018.5,5402.1,5022.5,5196.5,4981z M6044.4,4569.9c256.9-81,496.1-243.1,644.3-434.8c166-211.5,148.2-201.6,389.4-217.4c525.8-33.6,921-217.4,1195.8-555.4c181.8-225.3,266.8-462.5,284.6-800.5c5.9-114.6,19.8-223.3,27.7-241.1c9.9-19.8,106.7-92.9,213.5-162.1c229.3-152.2,369.6-300.4,464.5-496.1c92.9-189.7,118.6-322.2,106.7-557.4C9353,788.9,9236.4,534,8999.2,290.9C8598-120.2,7941.8-339.6,7339-264.5c-375.5,45.5-385.4,41.5-511.9-160.1c-150.2-243.1-349.8-417-620.6-541.6c-249-112.7-381.5-138.3-725.4-138.3c-294.5,2-314.2,4-494.1,65.2c-201.6,71.2-270.8,106.7-426.9,225.3c-144.3,106.7-197.6,112.7-347.9,35.6c-191.7-100.8-328.1-140.3-519.8-152.2c-276.7-17.8-511.9,59.3-709.5,229.3c-75.1,65.2-108.7,79.1-203.6,88.9c-677.9,69.2-1162.1,278.7-1557.4,674c-383.4,381.5-583.1,873.6-585,1432.9c-2,592.9,211.5,1087.1,650.2,1506.1c282.6,268.8,547.5,424.9,970.4,567.2c298.4,102.8,326.1,124.5,357.7,298.4c45.4,249,213.5,470.4,440.7,587c229.3,114.6,557.4,154.2,766.9,92.9c162.1-47.4,241.1-94.9,379.5-225.3c197.6-183.8,256.9-191.7,430.9-47.4c197.6,164,442.7,282.6,689.8,336C5518.7,4650.9,5848.7,4633.1,6044.4,4569.9z"/>
+                            <path class="loading__cloud__all__medium" d="M2071.7-1606.5c-189.7-51.4-274.7-90.9-428.9-191.7c-328.1-217.4-507.9-569.2-454.6-885.4c33.6-203.6,108.7-338,288.6-515.9c258.9-255,543.5-371.6,911.1-371.6s652.2,116.6,911.1,371.6c179.9,177.9,247.1,298.4,286.6,508c77.1,423-256.9,875.6-782.7,1055.4C2589.6-1563,2275.3-1551.2,2071.7-1606.5z M2650.8-2013.7c330.1-79.1,521.8-282.6,521.8-555.4c2-357.7-300.4-581.1-784.7-581.1s-786.6,223.3-784.7,581.1c0,140.3,33.6,233.2,122.5,336C1907.7-2025.5,2303-1932.6,2650.8-2013.7z"/>
+                            <path class="loading__cloud__all__small" d="M668.5-3683.8c-223.3-73.1-421-280.7-454.6-474.4c-33.6-197.6,128.5-448.7,359.7-563.3c162.1-79.1,381.5-90.9,545.5-29.6c251,94.9,428.9,312.3,428.9,525.7c0,140.3-57.3,258.9-179.9,373.6C1168.5-3666,909.6-3602.7,668.5-3683.8z M1071.7-4100.8c87-55.4,75.1-201.6-17.8-249c-27.7-13.8-108.7-25.7-179.9-25.7c-168,0-235.2,43.5-235.2,158.1c0,79.1,25.7,110.7,112.7,138.3C826.6-4053.4,1016.3-4069.2,1071.7-4100.8z"/></g></g>
+                        </svg>
+                    <img class="loading__cloud__logo" src="../images/logo/ohmyfood.png">
+                </div>
+            </div>
+        </div>
+
         <header class="header">
             <div class="logo">
                 <h1>ohmyfood</h1>
